# mcp-local-rag

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  create_tag.sh  fastmcp.json  pyproject.toml  smithery.yaml
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: publish-image.yml
images/: flowchart.mermaid
skills/: README.md
src/mcp-local-rag/: rag-search.py
src/mcp_local_rag/: main.py
src/mcp_local_rag/utils/: fetch.py  tools.py
