[project]
name = "mcp-local-rag"
version = "1.0.0"
authors = [
  { name="Nikhil Kapila", email="info@nkapila.me" },
]
description = "MCP \"server\" that can perform a web search locally without the use of APIs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "aiohttp>=3.13.2",
 "beautifulsoup4>=4.14.3",
 "ddgs>=9.9.2",
 "fastmcp>=2.13.1",
 "mediapipe>=0.10.21",
 "requests>=2.32.5",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/nkapila6/mcp-local-rag"
Issues = "https://github.com/nkapila6/mcp-local-rag/issues"

[build-system]
requires = [ "hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-local-rag = "mcp_local_rag.main:mcp.run"

[tool.hatch.build.targets.sdist]
include = ["embedder/*", "utils/*"]
